package com.youcode.aptio.model.enums;

public enum PaymentStatus {
}
