classDiagram
    class User {
        Long id
        String username
        String password
        String email
        List~Role~ roles
        +addRole(role: Role)
        +removeRole(role: Role)
    }

    class Role {
        Long id
        String name
        List~Permission~ permissions
        +addPermission(permission: Permission)
        +removePermission(permission: Permission)
    }

    class Permission {
        Long id
        String name
    }

    class Company {
        Long id
        String name
        String address
        String phoneNumber
        String email
        PlanType subscriptionPlan
        +addService()
        +manageSchedule()
        +subscribeToPlan(plan: PlanType)
    }

    class Service {
        Long id
        String name
        Integer duration
        Double price
        Company company
        +updateServiceDetails()
        +getServiceDetails()
    }

    class Appointment {
        Long id
        DateTime dateTime
        AppointmentStatus status
        User user
        Service service
        +updateStatus(status: AppointmentStatus)
        +notifyUser()
    }

    class Schedule {
        Long id
        List~TimeSlot~ availableSlots
        String openHours
        String closeHours
        Company company
        +addAvailability(slot: TimeSlot)
        +blockTimePeriod()
        +checkAvailability(date: Date)
    }

    class TimeSlot {
        Long id
        DateTime startTime
        DateTime endTime
        +getDuration()
    }

    class Payment {
        Long id
        Double amount
        Date paymentDate
        PaymentStatus status
        PaymentMethod method
        Appointment appointment
        +processPayment()
        +generateInvoice()
    }

    class Notification {
        Long id
        NotificationType type
        String message
        DateTime dateSent
        User recipient
        +sendNotification()
    }

    class AppointmentStatus {
        <<enumeration>>
        Confirmed
        Cancelled
        Rescheduled
    }

    class PaymentStatus {
        <<enumeration>>
        Pending
        Completed
        Failed
    }

    class PlanType {
        <<enumeration>>
        Free
        Paid
    }

    class NotificationType {
        <<enumeration>>
        SMS
        Email
    }

    class PaymentMethod {
        <<enumeration>>
        Stripe
        PayPal
    }

    Company "1" --> "1" Schedule : "manages"
    Company "1" --> "*" Service : "offers"
    Service "1" --> "*" Appointment : "is related to"
    User "1" --> "*" Appointment : "books"
    Appointment "1" --> "1" Payment : "has"
    Appointment "1" --> "*" Notification : "triggers"
    Schedule "1" --> "*" TimeSlot : "consists of"
    User "*" --> "*" Role : "has"
    Role "*" --> "*" Permission : "has"
    %% user with role company admin can manage company and role employee manage appointment and schedule
    User "1" --> "*" Company : "manages, works for"


    %% Enumerations relationships
    Appointment "1" --> "1" AppointmentStatus : "has"
    Payment "1" --> "1" PaymentStatus : "has"
    Company "1" --> "1" PlanType : "subscribes to"
    Notification "1" --> "1" NotificationType : "has"
    Payment "1" --> "1" PaymentMethod : "uses"